--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 
 default: &default
   host: localhost
-  adapter: postgres
+  adapter: postgresql
   username: javier
   password: javier
   encoding: unicode
